Fix border-radius gap issue with Timetable - Updated Timetable Cell's border-radius to be the same as Timetable's border-radius to fix the border-gap issue

--- a/website/src/views/timetable/TimetableCell.scss
+++ b/website/src/views/timetable/TimetableCell.scss
@@ -2,7 +2,7 @@
 
 $cell-padding: 0.3rem;
 $cell-opacity: 0.5;
-$cell-border-radius: 6px;
+$cell-border-radius: 0.25em;
 
 .baseCell {
   // Flex to ensure cell content sticks to top, because browsers tend to
